--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <div class="row">
           <div class="col">
             <p class="aboutMeText">
-              "Hello, my name is Tyler Helms and I am an ever-learning
+              Hello, my name is Tyler Helms and I am an ever-learning
               developer. I have done many different things in the past. I've
               been a soldier, a claims adjuster, as well as a construction
               scaffolder. I am driven to complete any mission I set before
