--- a/index.html
+++ b/index.html
@@ -50,14 +50,20 @@
               scaffolder. I am driven to complete any mission I set before
               myself in a timely manner and to the best of my ability. Once I
               graduate from Eleven Fifty Academy I will seek a long term career
-              in the industry. Click the button below to view my resume.
+              in the industry. 
+            </p>
+            <br>
+            <p>
+              
             </p>
             <button class="button">
+              <a href="./assets/Tyler Helms' Resume updated 1024 (1).docx">
+              </a>
               Resume
             </button>
           </div>
           <div class="col"> 
-            <img src="./assets/Screen Shot 2020-10-05 at 3.03.20 PM.png" class="aboutImg"/>
+            <img src="./assets/headshot.png" class="aboutImg"/>
           </div>
         </div>
       </div>
@@ -65,10 +71,19 @@
     <section>
       <div class="portfolio">
         <h3>Portfolio</h3>
+        <p>
+          Portfolio text
+        </p>
         <div class="thumbnails">
-          <img src="./assets/Screen Shot 2020-10-05 at 8.03.49 PM.png" class="cssCreature">
-          <img src="./assets/Screen Shot 2020-10-05 at 8.07.48 PM.png" class="catFact">
-          <img src="./assets/Screen Shot 2020-10-05 at 9.52.45 PM.png" class="staticLayout">
+          <a  href="https://codepen.io/tyhelms/pen/xxVXPdL" target="_blank">
+            <img src="./assets/whale.png" class="cssCreature">
+          </a>
+          <a href="https://tylerhelms.github.io/API-Project-1/">
+            <img src="./assets/cat.png" class="catFact">
+          </a>
+          <a href="https://tylerhelms.github.io/Static-Layout-Project/">
+            <img src="./assets/hulu.png" class="staticLayout">
+          </a> 
         </div>
       </div>
 
@@ -80,7 +95,7 @@
           id="fs-frm"
           name="simple-contact-form"
           accept-charset="utf-8"
-          action="https://formspree.io/f/{tshelms92@gmail.com}"
+          action="https://formspree.io/f/mjvpbpqp"
           method="post"
         >
           <fieldset id="fs-frm-inputs">
